--- a/test/index.html
+++ b/test/index.html
@@ -13,10 +13,7 @@
 
     <script type="module">
         import { encrypt, decrypt } from '../dist/index.js'
-        let data = {
-            name: 1,
-            age: 2
-        }
+        let data = '122333'
         encrypt(data).then(res => console.log(res))
     </script>
 </body>
