--- a/viewKit/index.html
+++ b/viewKit/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <script type="module">
-        import { encrypt, decrypt } from '../dist/index.js'
+        import { encrypt, decrypt } from './dist/index.js'
 
 
         // // 请求前加密数据
