feat: 添加加解密测试用例

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <script type="module">
-        import { encrypt, decrypt } from '../dist/index.js'
+        import { encrypt, decrypt } from '../dist/crypto.es.js'
 
 
         // 请求前加密数据
