--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
 
     <script type="module">
-        import { encrypt, decrypt } from './dist/crypto.es.js'
+        import { encrypt, decrypt } from './crypto.es.js'
 
 
         // // 请求前加密数据
